--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <div id="pano"></div>
 
+<div id="titleBar">
+  <h1 class="sceneName"></h1>
+</div>
+
 <div id="sceneList">
   <ul class="scenes">
     
